objects/lightsideapps__User_Data_Management_Template__c.object
<CustomObject>
    <description>Object to store Templates for User Data Migration/Management</description>
    <fields>
        <fullName>lightsideapps__Description__c</fullName>
        <inlineHelpText>Describe what data is being replaced and what criteria used so that it has meaningful information visible when selecting.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Object__c</fullName>
        <description>What Salesforce Object is being updated. Set via VF Page with coded picklist of Objects available.</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__QueryString__c</fullName>
        <description>Copy of the QueryString value in the related Query Object. Populated by the UDMTemplate Visualforce Page.</description>
        <label>QueryString</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Master Object storing the Query Details</description>
        <label>Query</label>
        <referenceTo>lightsideapps__Query_Object__c</referenceTo>
        <relationshipLabel>User Data Management Templates</relationshipLabel>
        <relationshipName>User_Data_Management_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Status__c</fullName>
        <inlineHelpText>Only Active Templates are available to select on User Management Records</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__User_Field_To_Update__c</fullName>
        <description>API Name of the User Field that is to be updated.</description>
        <label>User Reference Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>User Data Management Template</label>
    <listViews>
        <fullName>lightsideapps__All</fullName>
        <columns>NAME</columns>
        <columns>lightsideapps__Status__c</columns>
        <columns>lightsideapps__Description__c</columns>
        <columns>lightsideapps__Object__c</columns>
        <columns>lightsideapps__QueryString__c</columns>
        <columns>lightsideapps__Query__c</columns>
        <columns>lightsideapps__User_Field_To_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Data Management Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>